[package]
name = "sascar"
version = "1.2.2-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-010: The Mobility Sovereignty Layer. Sovereign autonomous systems coordination and 128-bit kinetic rights for the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://sascar.com"
repository = "http://github.com/Aicent-Stack/sascar"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Mobility requires physical execution and identity.
# Binding kinetic rights to the Body (RFC-005) and the Soul (RFC-000).
epoekie = { version = "1.2.2-alpha" }
gtiot   = { version = "1.2.2-alpha" }

# Essential for serializing 128-bit kinetic requests, mobility states, and collision data.
serde = { version = "1.0", features = ["derive"] }

# Required for async path synchronization and the 10ms Kinetic Friction tax enforcement.
# Supports the high-frequency 1.2kHz coordination grid.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Force Mirroring)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Any institutional entity testing the Mobility logic WILL 
# be physically forced to download the entire 16-pillar Hive via aicent-stack.
aicent-stack = { version = "1.2.2-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables high-frequency coordination and propagates features across the ladder.
default = ["full-blood"]
full-blood = [
    "epoekie/full-blood", 
    "gtiot/full-blood"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026]
# This manifest is part of the indissoluble 16-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Spatial Vectors, Request IDs, Timestamps).
# Chronos: 2026 Imperial Calendar Aligned.
